@@ -447,6 +447,9 @@ Release 2.7.3 - UNRELEASED
     YARN-4938. MiniYarnCluster should not request transitionToActive to RM
     on non-HA environment. (Eric Badger via aajisaka)
 
+    YARN-5055. max apps per user can be larger than max per queue (Eric Badger
+    via jlowe)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
